Knife tool crashes when the geometry has no face #78855

Closed
opened 2020-07-12 11:53:31 +02:00 by Pasang Bomjan · 6 comments

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-10 20:07, hash: d2b910fafe

Short description of error
Knife tool crashes when the geometry has no face.
Add a circle and in edit-mode, activate the knife-tool, and click.

**Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-10 20:07, hash: `d2b910fafe` **Short description of error** Knife tool crashes when the geometry has no face. Add a circle and in edit-mode, activate the knife-tool, and click.
Author

Added subscriber: @Pasang

Added subscriber: @Pasang

Added subscriber: @RC12

Added subscriber: @RC12

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm this.
Checked on a few older builds and its working on version: 2.90.0 Alpha, branch: master, commit date: 2020-07-02 22:21, hash: 5a13f682ee

Bisect points to this: 20558848d3

I can confirm this. Checked on a few older builds and its working on version: 2.90.0 Alpha, branch: master, commit date: 2020-07-02 22:21, hash: `5a13f682ee` Bisect points to this: `20558848d3`

This issue was referenced by 9c9eb03d78

This issue was referenced by 9c9eb03d7840471173964b0f2758e2053bb700b4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-07-13 14:03:12 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78855
No description provided.