Fix T78855: Knife tool crashes when the geometry has no face

I don't see the need for a BVH Tree to have root but not have leafs.
But apparently this case is possible.